--- a/_sass/new/map.scss
+++ b/_sass/new/map.scss
@@ -90,6 +90,7 @@ content .map .m-r p{
     content .map .m-l img{
         width: 100%;
         height: auto;
+        margin-bottom: 2rem;
     }
 
     content .map .m-r{
