--- a/_sass/new/overview.scss
+++ b/_sass/new/overview.scss
@@ -141,7 +141,7 @@ content .overview .o-r div div p{
         height: 100vh;
         grid-template-columns: 1fr;
         grid-column: 1/3;
-        padding-top: 5rem;
+        padding-top: 9rem;
         text-align: center;
     }
 
